# StarCitizenBindVkb

./: actions.py  ci.yml  conda.yml  conda_sc_tools.yml  config.json  configmap.py  design2.md  dump.json  export_configmap.py  globals.py  joystick.py  localization.py  main.py  pyproject.toml  pytest.ini  read_user_configmap.py  readme.md  requirements.txt  test_configmap.py  test_py_joystick.py  todo.md  ui.py  ui.spec
.github/workflows/: build.yml  ci.yml  python-app.yml  test.yml
app/: config.py  globals.py  localization.py  ui.py
app/components/: custom_button.py  settings_dialog.py  ui_action.py
app/data/: SCBindsDefault.xml  all_blanks.xml  layout_3_24_2_final_exported.xml  test_output.xml  vkb_new.json  vkb_new_test_export.json
app/dev_tools/: export_configmap.py
app/domain/: __init__.py  models.py
app/io/: __init__.py  repositories.py
app/models/: actions.py  configmap.py  device_actions.py  exported_configmap_xml.py  full_game_control_options.py  game_control_map.py  joystick.py  settings_dialog.py  ui_action.py
app/sc/: export_configmap.py
app/services/: __init__.py  (+1 more)
citizenbindvkb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
conda_envs/: conda_build.yaml
data/: SCBindsDefault.xml  actionmap.json  actionmaps.xml  layout_BK_DualVKB_3-22_exported.xml  layout_VBK_3_24_2_exported.xml  layout_VKB_final_3_22_exported.xml
models/: actions..bak  actions.py  configmap.py  joystick.py  ui_action.py
sc/: export_configmap.py
tests/: test_binding_planner.py  test_config.py  test_configmap.py  test_export.py  test_ui.py
(+4 files in other folders)
